--- a/app/src/main/res/layout/activity_organiser.xml
+++ b/app/src/main/res/layout/activity_organiser.xml
@@ -25,6 +25,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView2"
+            android:name="com.example.bebeappthatworks.MyEventOrganizer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
