--- a/app/src/main/res/layout/fragment_event_create.xml
+++ b/app/src/main/res/layout/fragment_event_create.xml
@@ -52,6 +52,8 @@
             android:id="@+id/button_capture"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:text="."
+            android:textColor="#1F1650"
             android:layout_marginStart="280dp"
             android:layout_marginTop="180dp"
             android:background="#00FFFFFF"
@@ -91,13 +93,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="15dp"
+            android:paddingTop="10dp"
             android:paddingBottom="2dp">
 
             <EditText
                 android:id="@+id/idEdtEventName"
                 android:layout_width="300dp"
-                android:layout_height="38dp"
+                android:layout_height="50dp"
                 android:background="#9A8FAF"
                 android:hint="@string/Enter_Event_name"
                 android:imeActionLabel="@string/action_sign_in_short"
@@ -111,7 +113,7 @@
             <EditText
                 android:id="@+id/idEdtEventLocation"
                 android:layout_width="300dp"
-                android:layout_height="38dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:background="#9A8FAF"
                 android:hint="@string/Enter_Event_location"
@@ -125,7 +127,7 @@
             <EditText
                 android:id="@+id/idEdtEventDuration"
                 android:layout_width="300dp"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:background="#9A8FAF"
                 android:hint="@string/Enter_Event_duration"
@@ -138,7 +140,7 @@
             <EditText
                 android:id="@+id/idEdtEventCapacity"
                 android:layout_width="300dp"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:background="#9A8FAF"
                 android:hint="@string/Enter_Event_capacity"
@@ -151,7 +153,7 @@
             <EditText
                 android:id="@+id/idEdtEventDate"
                 android:layout_width="300dp"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:background="#9A8FAF"
                 android:hint="@string/Enter_Event_date"
@@ -164,7 +166,7 @@
             <EditText
                 android:id="@+id/idEdtEventDescription"
                 android:layout_width="300dp"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:background="#9A8FAF"
                 android:hint="@string/Enter_Event_description"
@@ -177,7 +179,7 @@
             <EditText
                 android:id="@+id/linkPaid"
                 android:layout_width="300dp"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:background="#9A8FAF"
                 android:hint="@string/event_link"
