--- a/app/src/main/res/layout/activity_organiser.xml
+++ b/app/src/main/res/layout/activity_organiser.xml
@@ -32,6 +32,12 @@
             android:name="com.example.bebeappthatworks.MyEventOrganizer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView3"
+            android:name="com.example.bebeappthatworks.OneEventFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
