--- a/app/src/main/res/layout/fragment_no_buttons_organizer.xml
+++ b/app/src/main/res/layout/fragment_no_buttons_organizer.xml
@@ -2,8 +2,8 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/one"
-    android:name="com.example.bebeappthatworks.One"
+    android:id="@+id/two"
+    android:name="com.example.bebeappthatworks.Two"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="0dp"
