--- a/app/src/main/res/layout/fragment_profile_attendee.xml
+++ b/app/src/main/res/layout/fragment_profile_attendee.xml
@@ -58,12 +58,14 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="end|bottom"
-        android:layout_marginEnd="92dp"
-        android:layout_marginBottom="460dp"
         android:background="@drawable/add_photo"
         android:backgroundTint="#FFA500"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.771"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.342" />
 
     <TextView
         android:id="@+id/emailAttendee"
@@ -110,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionAttendee" />
 
     <ImageView
-        android:id="@+id/SettingsAttendee"
+        android:id="@+id/SettingsAttendeeButton"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@android:drawable/ic_menu_edit"
